[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/environment/debug/EnvironmentDebugOverlay.gd" id="1_yjk2e"]

[node name="EnvironmentDebugOverlay" type="CanvasLayer"]
script = ExtResource("1_yjk2e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 300.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Environment Debug"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="ThemeLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Theme: default"

[node name="BiomeLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Biome: default"

[node name="AssetLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Assets: None"

[node name="FallbackLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "No fallbacks"

[node name="HSeparator2" type="HSeparator" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="ThemeButtons" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
